# github-parser

./: .env.example  Dockerfile  README.md  docker-compose.yml  gh_parser.py  init_db.py  pyproject.toml  requirements.txt  setup.sh
scripts/: create_yc_func.sh  trigger_yc_func.sh
src/: __init__.py  config.py  db.py  router.py
src/schemas/: repo_activity.py  top_repos.py
